fixed some bootstrap spacing

--- a/src/app/noticeform/noticeform.component.css
+++ b/src/app/noticeform/noticeform.component.css
@@ -76,7 +76,5 @@
 
 .APIMessage {
     font-size: 1.4rem;
-    line-height: 1rem;
-
     color: #25893e;
 }
